--- a/voice-of-mind/src/ComponentCss/Contact.css
+++ b/voice-of-mind/src/ComponentCss/Contact.css
@@ -39,7 +39,7 @@
   }
   
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #04AA6D;
   }
   
   label{
@@ -56,17 +56,15 @@
 
   }
 
-  img{
-    width: 350px;
-  }
-
   .imgalign{
     margin-left: 130px;
   }
   
   hr{
-    color: green;
-    height: 80px;
+    color: #fcd000;
+	  height: 20px;
+    line-height: 50px;
+    border: none;
   }
 
   font {
